--- a/index.html
+++ b/index.html
@@ -1,1 +1,92 @@
 <h1>TareaGIT1</h1>
+<!doctype html>
+<html lang="en">
+
+<head>
+    <title>Title</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+</head>
+
+<body>
+    <div class="container">
+        <h2> Ejemplo 1: Una columna que ocupa todo el ancho (12 columnas).</h2>
+        <div class="row mb-4">
+            <div class="col-12 bg-primary text-white text-center">columna de 12 espacios</div>
+        </div>
+
+        <h2>Ejemplo 2: Dos columnas de igual tamaño, cada una ocupa 6 columnas.</h2>
+        <div class="row mb-4">
+            <div class="col-6 bg-secondary text-white text-center"> 1 columna de 6 espacios</div>
+            <div class="col-6 bg-primary text-white text-center"> 1 columna de 6 espacios</div>
+        </div>
+
+        <h2>Ejemplo 3: Tres columnas iguales (4 columnas cada una).</h2>
+        <div class="row mb-4">
+            <div class="col-4 bg-danger text-white text-center"> 1 columna de 4 espacios</div>
+            <div class="col-4 bg-primary text-white text-center"> 1 columna de 4 espacios</div>
+            <div class="col-4 bg-success text-white text-center"> 1 columna de 4 espacios</div>
+        </div>
+
+        <h2>Ejemplo 4: la Columnas de tamaño desigual</h2>
+        <div class="row mb-4">
+            <div class="col-3 bg-danger text-white text-center"> 1 columna de 3 espacios</div>
+            <div class="col-6 bg-primary text-white text-center"> 1 columna de 6 espacios</div>
+            <div class="col-3 bg-success text-white text-center"> 1 columna de 3 espacios</div>
+        </div>
+
+        <h2> Ejemplo 5: Adaptación en dispositivos (12, 6, 4)</h2>
+        <div class="row mb-4">
+            <div class="col-lg-3 col-md-4 col-sm-12 bg-danger text-white text-center"> 1 columna de 4 espacios</div>
+            <div class="col-lg-6 col-md-4 col-sm-12 bg-primary text-white text-center"> 1 columna de 4 espacios</div>
+            <div class="col-lg-3 col-md-4 col-sm-12 bg-success text-white text-center"> 1 columna de 4 espacios</div>
+        </div>
+
+
+
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+</body>
+
+</html>
